<resources>
    <string name="app_name">Udacity App Hub</string>

    <string name="hello_world">Hello world!</string>
    <string name="title">Google Nanodegree Apps</string>
    <string name="action_settings">Settings</string>


    <string name="button1">Spotify Streamer</string>
    <string name="button2">Scores App</string>
    <string name="button3">Library App</string>
    <string name="button4">Build It Bigger</string>
    <string name="button5">XYZ Reader</string>
    <string name="button6">Capstone Project: TBD</string>
</resources>
